<resources>
    <string name="app_name">Kumbil</string>
    <string name="logo_desc">KumbilLogo</string>
    <string name="Caption">eat homely, stay healthy</string>
    <string name="edit">Edit Menu</string>
    <string name="home">Home</string>
    <string name="new_orders">New Orders</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="notif">Notification</string>
    <string name="logout">Logout</string>
    <string name="cart">cart</string>
    <string name="search">search</string>
    <string name="myOrders">My Orders</string>
    <string name="register_desc">Register</string>
    <string name="dialog_create_menu">cookMenu is empty</string>
    <string name="createMenu">create cookMenu</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="profile">profile</string>
</resources>
