<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/edit" />
    <item
        android:id="@+id/action_orders"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/orders" />
    <item
        android:id="@+id/action_notif"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/notif" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/logout" />



    <!-- app:showAsAction="ifRoom"-->/>

<!-- Settings, should always be in the overflow -->


</menu>
