<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <androidx.constraintlayout.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/ivKumbilLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/logo_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/kumbil_logo" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="70dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/ivKumbilLogo"
            app:layout_constraintStart_toStartOf="@id/ivKumbilLogo"
            app:layout_constraintTop_toBottomOf="@id/ivKumbilLogo" />

        <TextView
            android:id="@+id/tvCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Caption"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/tvAppName"
            app:layout_constraintTop_toBottomOf="@id/tvAppName" />
    </androidx.constraintlayout.ConstraintLayout>
</RelativeLayout>